# research-ds-template

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-colab.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
configs/: example.yaml
data/sample/: metadata.csv
data/sample/S1/curves/: 1.csv  2.csv  3.csv  4.csv
data/sample/S1/spectra/: 1.csv  3.csv
data/sample/S1/timeseries/: 1.csv  2.csv  3.csv  4.csv
data/sample/S2/curves/: 1.csv  2.csv  3.csv  4.csv
data/sample/S2/spectra/: 1.csv  3.csv
data/sample/S2/timeseries/: 1.csv  2.csv  3.csv  4.csv
data/sample/S3/curves/: 1.csv  2.csv  3.csv  4.csv
data/sample/S3/spectra/: 1.csv  3.csv
data/sample/S3/timeseries/: 1.csv  2.csv  3.csv  4.csv
environments/colab/: analysis_template.ipynb
environments/hpc/: README.md  container.def  environment.yml  run_pipeline.py  submit_slurm.sh
src/rdstemplate/: __init__.py  __main__.py  config.py  merge.py  metadata.py  pipeline.py
src/rdstemplate/features/: __init__.py  base.py  curves.py  images.py  spectra.py  timeseries.py
src/rdstemplate/io/: __init__.py  loaders.py  sources.py
src/rdstemplate/models/: __init__.py  base.py  registry.py
tests/: conftest.py  generate_sample_data.py  test_config.py  test_extractors.py  test_merge.py  test_pipeline_e2e.py
